<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <EditText
        android:id="@+id/text_result"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:inputType="textPersonName"
        android:hint="0.000"
        android:background="@color/white"
        android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="4"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/bttn_plus"
                style="@style/bttn_calculator"
                android:text="@string/bttn_plus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/bttn_7"
                style="@style/bttn_calculator"
                android:text="@string/bttn_7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/bttn_4"
                style="@style/bttn_calculator"
                android:text="@string/bttn_4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/bttn_1"
                style="@style/bttn_calculator"
                android:text="@string/bttn_1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bttn_minus"
                style="@style/bttn_calculator"
                android:text="@string/bttn_minus"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/bttn_8"
                style="@style/bttn_calculator"
                android:text="@string/bttn_8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/bttn_5"
                style="@style/bttn_calculator"
                android:text="@string/bttn_5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/bttn_2"
                style="@style/bttn_calculator"
                android:text="@string/bttn_2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/bttn_mult"
                style="@style/bttn_calculator"
                android:text="@string/bttn_mult"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/bttn_9"
                style="@style/bttn_calculator"
                android:text="@string/bttn_9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/bttn_6"
                style="@style/bttn_calculator"
                android:text="@string/bttn_6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/bttn_3"
                style="@style/bttn_calculator"
                android:text="@string/bttn_3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="4">

            <Button
                android:id="@+id/bttn_div"
                style="@style/bttn_calculator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="/"/>

            <Button
                android:id="@+id/bttn_equals"
                style="@style/bttn_calculator"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:text="@string/bttn_equals"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/bttn_0"
                    style="@style/bttn_calculator"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/bttn_0" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>